@@ -94,7 +94,8 @@ SubVersion: $Id$
 	- [kevin] $1871: fix GDB crash when single-stepping
 	- [kevin] $1872: adjust to libtifiles2 reversion to file names in locale charset
 	                 actually honor locale for file names throughout
-	- [kevin] $1874: plug Qt event loop into GTK+ main loop so we will actually be able to receive/process DCOP messages
+	- [kevin] $1875: plug Qt event loop into GTK+ main loop so we will actually be able to receive/process DCOP messages
+	- [kevin] $1876: created a DCOP interface (currently empty)
 	
 	Note: trunk forked into tiemu-debugging-branch at rev. $983 and has been merged back 
 		into the trunk at rev. $1695.	
